# Clew

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: logo_spec.yaml
docs/: architecture.md  grammar.md  philosophy.md  roadmap.md
examples/week-20260706/: 20260706.md  20260707.md  20260708.md  20260709.md
examples/week-20260713/: 20260713.md  20260714.md  20260715.md  20260716.md
src/clew/: __init__.py  __main__.py  cli.py  model.py  models.py  normalize.py  parsed.py  parser.py  py.typed  validation.py
src/clew/exporters/: __init__.py  nws.py
tests/: test_cli.py  test_nws_exporter.py  test_parser.py  test_validation.py
tests/fixtures/: 20260723.md  20260724.md  20260725.md  20260726.md  20260727.md  20260728.md
tools/: make_logo.py
