[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clew"
version = "0.1.0"
description = "Leave clues, not paperwork."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
clew = "clew.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
